--- a/answers/1.5
+++ b/answers/1.5
@@ -1,1 +1,1 @@
-docker run --name backmlops -e environment=development backmlops
+docker run --name backmlops -e environment=development -p 5000:5000 backmlops
